<resources>
    <string name="app_name">task1</string>
    <string name="signup_name">Sign Up</string>
    <string name="profilePage_theme">ProfilePage</string>
    <string name="gallery_theme">Gallery</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="password_hint">Password </string>
    <string name="username_hint">Username</string>
    <string name="signin">SIGNIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_image_description">user image</string>
    <string name="screen1_title">Welcome to Appintro</string>
    <string name="screen1_description">Amazing android app with cool \n features</string>
    <string name="features">features</string>

    <string name="collapsing_toolbar">Collapsing Toolbar</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">DONE</string>
    <string name="Anagasetivatam">Anaga  setivatam</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for \nyour family and \n friends!</string>

    <string name="slide_3_title"> ALl in One App</string>
    <string name="slide_3_desc">More than 50 features in one \n Application</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="indonesia">Indonesia</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="collapse_header_image_name">Name:rfwerotip</string>
    <string name="content_navigation_text">Bottom navigation bars display three to five destinations
        at the bottom of a screen. Each destination is represented by an icon and an optional text label.
        When a bottom navigation icon is tapped, the user is
        taken to the top-level navigation destination associated with that icon.</string>
    <string name="fragment_one">One</string>
    <string name="frgment_two">Two</string>
    <string name="fragment_three">three</string>
    <!--signup-->
    <string name="enter_firstname_hint">Enter First Name</string>
    <string name="enter_lastname_hint">Enter Last Name</string>
    <string name="enter_email_hint">Enter Email</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="repeat_password_hint">Repeat Password</string>
    <string name="Add_birthday_hint">Add Birthday</string>
    <string name="pick_gender_hint">Pick Gender</string>
    <string name="add_country_hint">Add Country</string>
    <string name="city_hint">city</string>
<string name="add_city_hint">Add City in Georgia</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string-array name="gender">
        <item>@string/pick_gender_hint</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
