<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:gravity="center"
            android:layout_alignParentStart="true"
            android:paddingTop="50dp"
            android:text="@string/screen1_title"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/onboard_title_size" />

        <ImageView
            android:id="@+id/screen1_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:contentDescription="@string/login_image_description"
            android:src="@drawable/eat_icon" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:text="@string/screen1_description"
        android:textColor="@color/colorwhite"
        android:lines="2"
        android:textSize="@dimen/onboard_heading_text_size" />

</RelativeLayout>