<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:background="@color/colorwhite"
    android:layout_marginStart="@dimen/margin_start_signup"
    android:layout_marginEnd="@dimen/margin_end_signup"
    android:layout_marginTop="@dimen/margin_top_signup"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/top_margin_view"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/firstname_et"
            android:hint="@string/enter_firstname_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_text"
            android:paddingEnd="0dp"
            android:textColorHint="@color/view_bg"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_et"/>
        <TextView
            android:id="@+id/firstname_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_text"
            android:text="@string/first_name"
            android:textColor="@color/red"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="@dimen/text_size_et"/>
    </LinearLayout>
    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_1"
        android:background="@color/view_bg" />
    <LinearLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_view"
        android:layout_below="@id/view1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/lastname_et"
            android:hint="@string/enter_lastname_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_text"
            android:paddingEnd="0dp"
            android:textColorHint="@color/view_bg"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_et"/>
        <TextView
            android:id="@+id/lastname_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:paddingEnd="@dimen/padding_text"
            android:paddingStart="0dp"
            android:textColor="@color/red"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="@dimen/text_size_et"/>
    </LinearLayout>
    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_2"
        android:background="@color/view_bg" />

    <LinearLayout
        android:id="@+id/layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_view"
        android:layout_below="@id/view2"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/email_et"
            android:hint="@string/enter_email_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_text"
            android:paddingEnd="0dp"
            android:textColorHint="@color/view_bg"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size_et"/>
        <TextView
            android:id="@+id/email_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/red"
            android:paddingEnd="@dimen/padding_text"
            android:paddingStart="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="@dimen/text_size_et"/>
    </LinearLayout>
    <View
        android:id="@+id/view3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_3"
        android:background="@color/view_bg" />
    <LinearLayout
        android:id="@+id/layout_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_view"
        android:layout_below="@id/view3"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/password_et"
            android:hint="@string/enter_password_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_text"
            android:paddingEnd="0dp"
            android:textColorHint="@color/view_bg"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_et"/>
        <TextView
            android:id="@+id/password_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_text"
            android:textColor="@color/red"
            android:gravity="end"
            android:textSize="@dimen/text_size_et"/>
    </LinearLayout>
    <View
        android:id="@+id/view4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_4"
        android:background="@color/view_bg" />
    <LinearLayout
        android:id="@+id/layout_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_view"
        android:layout_below="@id/view4"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/re_password_et"
            android:hint="@string/repeat_password_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_text"
            android:paddingEnd="0dp"
            android:textColorHint="@color/view_bg"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_et"/>
        <TextView
            android:id="@+id/re_password_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password_hint"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_text"
            android:textColor="@color/red"
            android:gravity="end"
            android:textSize="@dimen/text_size_et"/>
    </LinearLayout>
    <View
        android:id="@+id/view5"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_5"
        android:background="@color/view_bg" />
    <LinearLayout
        android:id="@+id/layout_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_view"
        android:layout_below="@id/view5"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/birthday_et"
            android:hint="@string/Add_birthday_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_text"
            android:paddingEnd="0dp"
            android:onClick="onClick"
            android:textColorHint="@color/view_bg"
            android:inputType="text"
            android:textSize="@dimen/text_size_et"/>
        <TextView
            android:id="@+id/birthday_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Add_birthday_hint"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_text"
            android:textColor="@color/red"
            android:gravity="end"
            android:textSize="@dimen/text_size_et"/>
    </LinearLayout>
    <View
        android:id="@+id/view6"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_6"
        android:background="@color/view_bg" />

    <LinearLayout
        android:id="@+id/layout_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_view"
        android:layout_below="@id/view6"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/gender_et"
            android:hint="@string/pick_gender_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_text"
            android:paddingEnd="0dp"
            android:textColorHint="@color/view_bg"
            android:inputType="text"
            android:textSize="@dimen/text_size_et"
            android:entries="@array/gender"/>
        <TextView
            android:id="@+id/gender_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pick_gender_hint"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_text"
            android:textColor="@color/red"
            android:gravity="end"
            android:textSize="@dimen/text_size_et"/>
    </LinearLayout>
    <View
        android:id="@+id/view7"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_7"
        android:background="@color/view_bg" />



    <LinearLayout
        android:id="@+id/layout_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_view"
        android:layout_below="@id/view7"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/country_et"
            android:hint="@string/add_country_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_text"
            android:paddingEnd="0dp"
            android:textColorHint="@color/view_bg"
            android:inputType="text"
            android:textSize="@dimen/text_size_et"/>
        <TextView
            android:id="@+id/country_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_country_hint"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_text"
            android:textColor="@color/red"
            android:gravity="end"
            android:textSize="@dimen/text_size_et"/>
    </LinearLayout>
    <View
        android:id="@+id/view8"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_8"
        android:background="@color/view_bg" />



    <LinearLayout
        android:id="@+id/layout_9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_view"
        android:layout_below="@id/view8"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/city_et"
            android:hint="@string/city_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_text"
            android:paddingEnd="0dp"
            android:textColorHint="@color/view_bg"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_et"/>
        <TextView
            android:id="@+id/city_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/city_hint"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_text"
            android:textColor="@color/red"
            android:gravity="end"
            android:textSize="@dimen/text_size_et"/>
    </LinearLayout>
    <View
        android:id="@+id/view9"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_9"
        android:background="@color/view_bg" />



    <LinearLayout
        android:id="@+id/layout_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_view"
        android:layout_below="@id/view9"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/city1_et"
            android:hint="@string/add_city_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_text"
            android:paddingEnd="0dp"
            android:textColorHint="@color/view_bg"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_et"/>
        <TextView
            android:id="@+id/city1_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_city_hint"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_text"
            android:textColor="@color/red"
            android:gravity="end"
            android:textSize="@dimen/text_size_et"/>
    </LinearLayout>
    <View
        android:id="@+id/view10"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_10"
        android:background="@color/view_bg" />
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view10"
        android:layout_marginTop="@dimen/top_margin_view"
        android:text="@string/signin"/>
</RelativeLayout>