<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_header"
    android:layout_width="match_parent"
    android:background="@color/red"
    android:layout_height="?attr/actionBarSize"
    android:weightSum="3"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/rlt_menu_left"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:layout_gravity="center|start"
        android:gravity="center|start">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/icon1"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/icon2"
            android:visibility="gone"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:layout_gravity="center"
        android:text="@string/signin"
        android:textColor="@color/colorwhite"
        android:textSize="@dimen/login_text_size"/>

    <RelativeLayout
        android:id="@+id/rlt_right_content"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:layout_gravity="center|end"
        android:gravity="center|end">

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:visibility="visible"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon3"/>

        <TextView
            android:id="@+id/iv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/next"
            android:visibility="gone"/>
    </RelativeLayout>
</LinearLayout>